k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rizquna-erp
  labels:
    name: rizquna-erp
    environment: production
